Update installation-for-new-ubuntu.md